gcc/testsuite/g++.dg/modules/global-1_b.C
import thing;

void bink ()
{
  baz ();
  bar (); // { dg-error "not declared" ""  }
}
